--- a/alurapic/.prettierrc
+++ b/alurapic/.prettierrc
@@ -1,5 +1,7 @@
 {
   "singleQuote": true,
   "quoteProps": "preserve",
-  "bracketSpacing": true
+  "bracketSpacing": true,
+  "arrowParens": "avoid",
+  "semi": true
 }
